add product images

--- a/_includes/product-grid-item.html
+++ b/_includes/product-grid-item.html
@@ -14,7 +14,8 @@
   <div class="thumbnail">
     <a href="{{ product.url }}" class="grid-img-outer">
       <!-- <img src="{ featured_image.src2 }" alt="{ featured_image.alt }"> -->
-      <img src="http://lorempixel.com/g/253/253/technics?random={{ product.id }}" alt="{{ product.title }}">
+      <!-- <img src="http://lorempixel.com/253/253/technics?random={{ product.id }}" alt="{{ product.title }}"> -->
+      <img src="/img/products/sm/{{ product.id }}.jpg" alt="{{ product.title }}">
     </a>
     <div class="caption">
       <h5>
