update navbar-main css

--- a/_includes/navbar-main.html
+++ b/_includes/navbar-main.html
@@ -1,6 +1,6 @@
 
 
-<nav class="navbar navbar-default navbar-static-top">
+<nav class="navbar navbar-default navbar-static-top navbar-main">
   <div class="container">
 
     <!-- Brand and toggle get grouped for better mobile display -->
