--- a/css/main.scss
+++ b/css/main.scss
@@ -73,6 +73,11 @@ body {
   }
 }
 
+.navbar-main {
+  border: 0;
+  background: #DDD;
+}
+
 .owl-carousel {
   border-radius: 4px;
   overflow: hidden;
