update owl carousel

--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -21,8 +21,10 @@
   $(document).ready(function() {
     $("#owl-carousel").owlCarousel({
       // navigation : true,
-      slideSpeed : 300,
-      paginationSpeed : 400,
+      autoPlay: true,
+      transitionStyle: "fade",
+      slideSpeed: 300,
+      paginationSpeed: 400,
       singleItem: true
     });
   });
