--- a/css/main.scss
+++ b/css/main.scss
@@ -96,12 +96,13 @@ body {
     top: 35px;
     left: 0;
     background-color: rgba(#FFF, .6);
-    padding: 0 50px 10px;
+    padding: 0 50px 15px;
     width: 100%;
     > * {
       display: inline-block;
       float: left;
       clear: left;
+      color: #222;
     }
   }
   h2 {
