update carousel headlines

--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -10,7 +10,7 @@
     <div class="item">
       <img src="/img/carousel/{{ i }}.jpg" alt="Slide {{ i }}" class="img-responsive">
       <div class="item-text">
-        <h2>To the last detail!</h2>
+        <h2>Down to the last detail</h2>
         <h3>Franklin is a top-notch responsive theme that actually works.</h3>
       </div>
     </div>
