--- a/_includes/owl.html
+++ b/_includes/owl.html
@@ -11,7 +11,8 @@
       <img src="/img/carousel/{{ i }}.jpg" alt="Slide {{ i }}" class="img-responsive">
       <div class="item-text">
         <h2>Down to the last detail</h2>
-        <h3>Franklin is a top-notch responsive theme that actually works.</h3>
+         <!-- top-notch -->
+        <h3>Franklin is a responsive theme that actually works.</h3>
       </div>
     </div>
   {% endfor %}
