--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
 
       <main role="main">
         <div class="container">
+          {% include search-bar.html %}
           {{ content }}
         </div>
       </main>
