--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
       <main role="main">
         <div class="container">
           {% include search-bar.html %}
+          {% include cart.html %}
           {{ content }}
         </div>
       </main>
